@startuml core01_01_design_dc.png
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false
    
    class UIController {
        -uiExtension;
        +add(uiExtension);
    }    

    class ExtensionManager {
        +getExtensions();
    }
    class ManagerExtension {
        +getUIextention();
    }

    class UIExtensionManager {
        +new(extension, uic);
        +getSideBar();
    }

    class ExensionManagerPanel {
        +new(uic);
        +getSideBar();
    }

     class ExtensionManagerController{
      }

    
    ExtensionManager <-- UIController
    ManagerExtension <-- UIController
    UIExtensionManager <-- ManagerExtension
    ExensionManagerPanel <-- UIExtensionManager
     ExtensionManagerController <-- ExensionManagerPanel

@enduml